# SR-Spritesheet-Manager

./: .gitignore  README.md
Demos/_SR/: Cricket.srsmproj.json  Demo Project.srsmproj.json
Demos/_SR/FlatBoy/: FlatBoy.srsmproj.json
Project/: CMakeLists.txt  SRSpritesheet.pro  pnq_seqencer.pro
Project/Cloc/: cloc.bat  cloc_definitions.txt  code_count_srsm_total.csv
Project/Documentation/: compile_docs.sh  spritesheet_generator.md
Project/Resources/: ResourceFile.qrc
Project/Resources/_Src/: bg-grid.afphoto  icons.afphoto  no-animation-selected.afphoto  scene_docs.afphoto  splash.afdesign  srsm_icon.afdesign  timeline-mockup.afphoto
Project/Source/: framelistview.cpp  framelistview.hpp  main.cpp  main.hpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  mainwindow.ui  newanimation.cpp  newanimation.hpp  newanimation.ui  sr_main_window.cpp  sr_main_window.hpp  sr_main_window.ui  sr_new_animation_dialog.cpp  sr_new_animation_dialog.hpp
Project/Source/Data/: bf_property.hpp  sr_animation.cpp  sr_animation.hpp  sr_project.cpp  sr_project.hpp  sr_settings.cpp  sr_settings.hpp  srsm_animation.cpp  srsm_animation.hpp  srsm_project.cpp  srsm_project.hpp  srsm_settings.cpp
Project/Source/Server/: sr_live_reload_server.cpp  sr_live_reload_server.hpp
Project/Source/UI/: image_library_model.cpp  image_library_model.hpp  sr_animated_sprite.cpp  sr_animated_sprite.hpp  sr_animation_preview.cpp  sr_animation_preview.hpp  sr_animation_preview.ui  sr_image_library.cpp  sr_image_library.hpp  sr_timeline.cpp  sr_timeline.hpp  sr_timeline.ui  sr_welcome_window.cpp  sr_welcome_window.hpp  sr_welcome_window.ui  srsm_animated_sprite.cpp  srsm_animated_sprite.hpp  srsm_animation_preview.cpp  srsm_animation_preview.hpp  srsm_image_library.cpp  srsm_image_library.hpp  srsm_timeline.cpp  srsm_timeline.cpp~RF802c12.TMP  srsm_timeline.hpp  srsm_timeline.ui
